--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">QuartoAppDio_EletricCar</string>
+    <string name="title_eletric_car">Eletric Car</string>
+    <string name="subtitle_all_cars">All Cars</string>
+    <string name="subtitle_fav">Favorites</string>
+    <string name="field_price">Price:</string>
+    <string name="field_battery">Battery:</string>
+    <string name="field_power">Power:</string>
+    <string name="field_price_val">$ 50.0000,00</string>
+    <string name="field_battery_val">93.4 kWh</string>
+    <string name="field_power_val">646 cv</string>
+    <string name="field_charge">Charge:</string>
+    <string name="field_charge_val">25min</string>
 </resources>
