--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">QuartoAppDio_EletricCar</string>
     <string name="title_eletric_car">Eletric Car</string>
-    <string name="subtitle_all_cars">All Cars</string>
+    <string name="subtitle_all_cars">Cars</string>
     <string name="subtitle_fav">Favorites</string>
     <string name="field_price">Price:</string>
     <string name="field_battery">Battery:</string>
@@ -18,6 +18,7 @@
     <string name="field_go_back_home">GO BACK HOME</string>
     <string name="field_go_to_calculate_function">GO TO CALCULATE FUNCTION</string>
     <string name="field_calculate_autonomy">Calculate Autonomy</string>
-    <string name="desc_fab_gotocalc_button">Button to function that computes autonomy</string>
+    <string name="desc_fab_gotocalc_button">Function that computes autonomy</string>
     <string name="desc_iv01">An eletric car</string>
+    <string name="tab_cars_description">The cars tab in the maind screen</string>
 </resources>
