Adapters and mock data.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">QuartoAppDio_EletricCar</string>
     <string name="title_eletric_car">Eletric Car</string>
-    <string name="subtitle_all_cars">Cars</string>
+    <string name="subtitle_all_cars">All Cars</string>
     <string name="subtitle_fav">Favorites</string>
     <string name="field_price">Price:</string>
     <string name="field_battery">Battery:</string>
