Working with favorites implementation. I've also enhanced modularization.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="response_error">Something wrong with connection. Try again later.</string>
     <string name="no_connectivity">There\'s no connectivity.</string>
     <string name="saved_calc">saved_calc</string>
+    <string name="favorited_car">Car successfully favorited on local storage!</string>
+    <string name="unfavorited_car">Car unfavorited on local storage!</string>
 </resources>
